--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,12 @@
     <script src="./js/controllers/iLearnController.js"></script>
 </head>
 <body>
-    <div ng-controller="iLearnController" class="container card">
+    <div ng-controller="iLearnController" class="container card ilearnContaniner">
         <h1 ng-bind="title"></h1>
         <span>{{message}}</span>
+        
         <div class="studentsList">
-            <table class="table table-striped">
+            <table class="table table-striped" ng-show="students.length > 0">
                 <tr>
                     <th></th>
                     <th>Nome</th>
@@ -33,9 +34,9 @@
                     <td>{{student.course.title}}</td>
                 </tr>
             </table>
-            <div class="form-group">
+            <div class="studentForm form-group">
                 <form>
-                    <div class="row">
+                    <div class="row  speace">
                         <div class="col">
                             <input type="text" class="form-control" ng-model="student.name" placeholder="Nome"/>
                         </div>
@@ -43,7 +44,7 @@
                             <input type="text" class="form-control" ng-model="student.phone" placeholder="Tellefone"/>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row speace">
                         <div class="col">
                             <input type="text" class="form-control" ng-model="student.address" placeholder="Endereço"/>
                         </div>
@@ -60,8 +61,8 @@
 
                     </div>
                     <div class="row">
-                        <button class="btn btn-primary" ng-click="registerStudent(student)" ng-disabled="!student.name || !student.phone || !student.address || !student.dateAdmission">Salvar</button>
-                        <button class="btn btn-danger" ng-click="deleteStudent(students)" ng-disabled="!isStudentChecked(students)">Excluir</button>                            
+                        <button class="button-speace btn btn-primary" ng-click="registerStudent(student)" ng-disabled="!student.name || !student.phone || !student.address || !student.dateAdmission">Salvar</button>
+                        <button class="button-speace btn btn-danger" ng-click="deleteStudent(students)" ng-show="isStudentChecked(students)">Excluir</button>                            
                     </div>
                 </form>
 
