--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <script src="./node_modules/angular/angular.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/controllers/iLearnController.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div ng-controller="iLearnController" class="container card ilearnContaniner">
@@ -16,6 +17,7 @@
         <span>{{message}}</span>
         
         <div class="studentsList">
+            <button type="button" class="btn btn-outline-primary" ng-click="pdfGeneration()">Dwnload PDF</button>
             <table class="table table-striped" ng-show="students.length > 0">
                 <tr>
                     <th></th>
@@ -61,14 +63,16 @@
 
                     </div>
                     <div class="row">
-                        <button class="button-speace btn btn-primary" ng-click="registerStudent(student)" ng-disabled="!student.name || !student.phone || !student.address || !student.dateAdmission">Salvar</button>
-                        <button class="button-speace btn btn-danger" ng-click="deleteStudent(students)" ng-if="isStudentChecked(students)">Excluir</button>                            
+                        <button type="button" class="button-speace btn btn-primary" ng-click="registerStudent(student)" ng-disabled="!student.name || !student.phone || !student.address || !student.dateAdmission">Salvar</button>
+                        <button type="button" class="button-speace btn btn-danger" ng-click="deleteStudent(students)" ng-if="isStudentChecked(students)">Excluir</button>                            
                     </div>
                 </form>
 
             </div>
-
         </div>
+
+        <div ng-include="'footer.html'"></div>
+        <!-- <footer  class="footer-page">Desenvolvido por Yanka Santos</footer> -->
 
     </div>
 </body>
